syntax = "proto3";

package ap.user.v1;
option go_package = "github.com/AssemblyPayments/go-user-api/pkg/proto;user_pb";

// compile options properly, do not remove
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.gogoproto_import) = false;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  bool admin = 5;
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  bool admin = 4;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest{
  string id = 1;
}

message GetUserResponse{
  User user = 1;
}
